crates/test-files/fixtures/compile_errors/module_const_not_literal.fe
const FOO: u256 = 1 + 2